--- a/NuptialLogAndroid/app/src/main/res/values/strings.xml
+++ b/NuptialLogAndroid/app/src/main/res/values/strings.xml
@@ -40,7 +40,7 @@
     <string name="validated_time">Time of Validation</string>
     <string name="weather_for_flight">Flight Weather from OpenWeather Map</string>
     <string name="no_comments">No comments</string>
-    <string name="record_history">Record_history</string>
+    <string name="record_history">Record History</string>
     <!-- COMMENT MANAGEMENT -->
     <string name="new_comment">New Comment</string>
     <string name="enter_comment">Enter your comment below.</string>
@@ -93,12 +93,12 @@
     <string name="create_account_button_message">Create Account</string>
     <string name="forgot_password_button_message">Forgot Password?</string>
     <string name="account_label">Account</string>
-    <string name="login_or_create">Log in or create account</string>
+    <string name="login_or_create">Sign in or create account</string>
     <string name="ok">OK</string>
     <string name="empty_user_pass_title">Empty Username or Password</string>
     <string name="empty_user_pass_message">Please enter your username and password before continuing.</string>
     <string name="incorrect_credentials_title">Incorrect Credentials</string>
-    <string name="incorrect_credentials_message">Your login credentials failed. Please try again or reset your password.</string>
+    <string name="incorrect_credentials_message">Your sign in credentials failed. Please try again or reset your password.</string>
     <string name="forbidden_access_title">Access Forbidden</string>
     <string name="forbidden_access_message">Your account is not active. Please contact us to reactivate your account.</string>
     <string name="json_parse_title">Parse Error</string>
@@ -106,6 +106,12 @@
     <string name="no_response_title">Network Error</string>
     <string name="no_response_message">No response from the server. Please check your network connection and try again.</string>
     <string name="try_again">Try Again</string>
-    <string name="other_login_error_title">Other Login Error</string>
-    <string name="other_login_error_message">Error logging in (status=%d). Please try again later. If the problem persists, please contact us.</string>
+    <string name="other_login_error_title">Other Sign In Error</string>
+    <string name="other_login_error_message">Error signing in (status=%d). Please try again later. If the problem persists, please contact us.</string>
+    <string name="sign_in_title">Sign into AntNupTracker</string>
+    <string name="no_user_selected">No User Selected</string>
+    <string name="weather_title">Weather for Flight</string>
+    <string name="user_title">Profile: %s</string>
+    <string name="logged_in_as">You are signed in as %s.</string>
+    <string name="not_logged_in">You are not signed in.</string>
 </resources>
